Fix placeholder alignment

--- a/src/components/Dialogs/EditMediaDialog/Chapters.css
+++ b/src/components/Dialogs/EditMediaDialog/Chapters.css
@@ -5,6 +5,7 @@
 }
 
 .Chapters-select {
+  padding-top: 8px;
   display: flex;
 }
 
